krebseng/krebseng-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krebseng-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: krebseng-site
  template:
    metadata:
      labels:
        app: krebseng-site
    spec:
      containers:
        - name: krebseng-site
          image: brunokrebs/krebseng-site
