krebseng/krebseng-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: krebseng-site-node-port
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: krebseng-site
